--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
-    "functions": {
-    "api/*.php": {
-      "runtime": "vercel-php@0.6.0"
-    }
-  },
-
+  "builds": [
+    { "src": "index.php", "use": "vercel-php@0.6.0" },
+    { "src": "Counselor/(.*).php", "use": "vercel-php@0.6.0" },
+    { "src": "Student/(.*).php", "use": "vercel-php@0.6.0" }
+  ],
   "routes": [
     { "src": "/Counselor/(.*)", "dest": "/Counselor/$1" },
     { "src": "/Student/(.*)", "dest": "/Student/$1" },
