--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.php", "use": "vercel-php@0.6.0" },
-    { "src": "Counselor/(.*).php", "use": "vercel-php@0.6.0" },
-    { "src": "Student/(.*).php", "use": "vercel-php@0.6.0" }
+    { "src": "index.php", "use": "vercel-php" },
+    { "src": "Counselor/(.*).php", "use": "vercel-php" },
+    { "src": "Student/(.*).php", "use": "vercel-php" }
   ],
   "routes": [
     { "src": "/Counselor/(.*)", "dest": "/Counselor/$1" },
